# ephemeral_auth

./: .gitignore  .sepha.json.example  .travis.yml  Cargo.toml  README.md
src/: config.rs  main.rs  util.rs
src/endpoints/: authorization.rs  mod.rs
