[package]
name = "sepha"
version = "0.1.0"
authors = ["chip reed <chip@chip.sh>"]
edition = "2018"
description = "A self contained 3rd party auth server for plug.dj"
license = "AGPL-3.0-or-later"

[dependencies]
chrono = "0.4"
http = "0.1"
jsonwebtoken = "5"
lazy_static = "1.2"
rand = "0.6"
reqwest = "0.9"
serde = "1"
serde_derive = "1"
serde_json = "1"
time = "0.1"
warp = "0.1"